# LoRa-Bridge

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml
.agents/rules/: coding-principles.md  refactoring-principles.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.claude/hooks/: check-worktree.sh
.github/workflows/: ci.yml  docs.yml
docs/: ARCHITECTURE.md  gen_pages.py  index.md
docs/config/: index.md
docs/contributing/: index.md
docs/install/: index.md  meshcore.md  telegram.md
docs/superpowers/specs/: 2026-06-28-telegram-roles-moderation-design.md  2026-06-28-visual-transliterate-design.md
lora_bridge/: __init__.py  app.py  settings.py  wiring.py
lora_bridge/config/: errors.py  loader.py  schema.py
lora_bridge/config/schema/: __init__.py  app_config.py  connections.py  endpoints.py  ids.py  messengers.py  nodes.py  policies.py  rooms.py
lora_bridge/core/: __init__.py  bridge.py  dedup.py  egress.py  journal.py  loopguard.py  notifier.py  queue.py  ratelimit.py  routing.py  status.py  supervisor.py  transform.py  ttl_window.py
lora_bridge/domain/: __init__.py  models.py  ports.py
lora_bridge/transports/: hub.py
lora_bridge/transports/meshcore/: __init__.py  connection.py  result.py  transport.py
lora_bridge/transports/meshcore/mappers/: __init__.py  channel.py  channel_util.py  handler.py  private.py  public.py  room_server.py
lora_bridge/transports/telegram/: __init__.py  channels.py  commands.py  reactions.py  transport.py
lora_bridge/transports/telegram/commands/: __init__.py  framework.py  handlers.py  moderation.py
lora_bridge/transports/telegram/moderation/: roles.py  store.py  transliterate.py
meshcore_bridge/: __init__.py  app.py
meshcore_bridge/config/: __init__.py  schema.py
meshcore_bridge/core/: bridge.py  journal.py  notifier.py  queue.py  transform.py
meshcore_bridge/domain/: models.py  ports.py
meshcore_bridge/transports/: __init__.py
meshcore_bridge/transports/meshcore/: transport.py
meshcore_bridge/transports/telegram/: __init__.py
tests/: fakes.py  test_config_crossref.py  test_config_descriptions.py  test_config_errors.py  test_config_errors_unit.py  test_config_rooms.py  test_config_schema.py  test_config_yaml.py  test_dedup_loopguard.py  test_docs_generator.py  test_meshcore_mappers.py  test_pipeline.py  test_reconnect.py  test_shutdown.py  test_telegram_channels.py  test_telegram_commands.py  test_telegram_moderation_commands.py  test_telegram_moderation_roles.py  test_telegram_moderation_store.py  test_telegram_moderation_transliterate.py  test_telegram_reactions.py  test_telegram_send_format.py  test_transform.py  test_ttl_scenarios.py  test_wiring_integration.py
tests/helpers/: fakes.py
