[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lora-bridge"
version = "0.0.1"
description = "Двунаправленный мост между LoRa-сетями (MeshCore, …) и мессенджерами (Telegram, …)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "anyio>=4.0",          # структурная конкуррентность (task groups, memory streams)
    "meshcore>=2.3,<3",    # companion-протокол MeshCore (meshcore_py); адаптер таргетит 2.x API, мажор закрыт — типы либы влияют на mypy (follow_untyped_imports)
    "aiogram>=3.0",        # Telegram Bot API
    "pydantic>=2.0",       # валидация конфига
    "envyaml>=1.2",        # парсинг config.yaml + подстановка ${ENV_VAR}; тянет pyyaml
    "aiosqlite>=0.19",     # журнал намерений (§11.1)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0",
    "ruff>=0.4",
    "mypy>=1.14",  # per-module follow_untyped_imports (см. [tool.mypy] ниже) — добавлен в 1.14.0
    "types-pyserial",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",          # тема и навигация
    "mkdocs-gen-files>=0.5",         # запускает docs/gen_pages.py при сборке
    "mkdocstrings[python]>=0.27",    # для ::: directives при необходимости
]

[project.scripts]
lora-bridge = "lora_bridge.app:main"

[tool.hatch.build.targets.wheel]
packages = ["lora_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["worktrees/", ".claude/worktrees/"]

[tool.mypy]
python_version = "3.11"
strict = true

# meshcore поставляется с inline-аннотациями, но без py.typed-маркера.
# Разрешаем mypy читать их напрямую — тогда MeshCore становится настоящим типом,
# а не Any. Цена: типы либы влияют на наш mypy (поэтому мажор закреплён <2).
[[tool.mypy.overrides]]
module = "meshcore.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "envyaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
anyio_mode = "auto"
